# qaul.net

./: .build_nested.sh  .gitconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  BuildAndroid.cmake  BuildOSX.cmake  BuildUnixoid.cmake  BuildWindows.cmake  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FileCopy.cmake  FileRename.cmake  INSTALL.md  LICENSE  LICENSES.md  Makefile  QaulConfig.h.in  README.md  README_Android.md  README_Android_Devices.md  README_OSX.md  README_Raspberry_UbuntuMate.md  README_Unix.md  README_Windows.md  README_qaul.net-ng.md  REPOSITORY.md  ReadMe.md  SECURITY.md  SystemSpecificInformations.cmake  build.gradle  default.nix  ember-cli-build.js  file.txt  lefthook.yml  (+7 more)
alexandria/: Cargo.toml  README.md
alexandria/src/: delta.rs  dir.rs  error.rs  lib.rs  notify.rs  store.rs  wire.rs
alexandria/src/core/: api.rs  builder.rs  data.rs  mod.rs  sessions.rs  users.rs
alexandria/src/crypto/: asym.rs  map.rs
alexandria/src/meta/: mod.rs  tags.rs  users.rs
alexandria/src/query/: iter.rs  mod.rs  sub.rs
alexandria/src/record/: kv.rs  mod.rs
alexandria/src/utils/: diff.rs  iter.rs  mod.rs  path.rs  sub.rs  tag.rs
alexandria/tests/: harness.rs  simple.rs  trivial.rs
android-support/: Cargo.toml  README  README.md  build_env_setup.sh  cargo-config.toml
android-support/src/: lib.rs
clients/http-test/: Cargo.toml
clients/http-test/src/: main.rs
clients/hubd/: Cargo.toml  README.md
clients/hubd/src/: cfg.rs  config.rs  log.rs  main.rs  other_main.rs  spawn.rs  state.rs  upnp.rs
clients/hubd/tests/: peers1.txt  peers2.txt
clients/hubdctl/: Cargo.toml
clients/hubdctl/src/: main.rs
clients/linux/: Cargo.toml
clients/linux-cli/: Cargo.toml
clients/linux-cli/src/: main.rs
clients/linux-daemon/: Cargo.toml
clients/linux-daemon/src/: cli.rs  config.rs  main.rs
clients/linux-http-test/: Cargo.toml  webui
clients/linux-http-test/src/: main.rs
clients/linux-voice-test/: Cargo.toml
clients/linux-voice-test/src/: event.rs  main.rs
clients/linux-ws-test/: Cargo.toml
clients/linux-ws-test/src/: main.rs
clients/linux/src/: main.rs
clients/multinode-test/: Cargo.toml  README.md
clients/multinode-test/src/: main.rs
clockctrl/: Cargo.toml
clockctrl/src/: ctrl.rs  error.rs  lib.rs
libqaul/: Cargo.toml  README.md  build.rs  build_libqaul_android.sh  qaullib.c  qaullib.h  qaullib_appevent_LL.c  qaullib_crypto.c  qaullib_defines.h  qaullib_exediscovery.h  qaullib_file_LL.c  qaullib_ipc.h  qaullib_messaging.c  qaullib_private.h  qaullib_sql.h  qaullib_topo_LL.h  qaullib_udp_communication.h  qaullib_user.h  qaullib_user_LL.c  qaullib_validate.c  qaullib_voip.c  qaullib_voip_dummy.c  qaullib_webclient.c  qaullib_webserver.c  qaullib_webserver.h
libqaul/common/: Cargo.toml
libqaul/common/src/: error.rs  identity.rs  lib.rs  message.rs  payload.rs  service.rs
libqaul/http/: Cargo.toml  webui
libqaul/http-api/: Cargo.toml  less
libqaul/http-api/src/: auth.rs  authenticator.rs  cookie.rs  error.rs  jsonapi.rs  lib.rs  method.rs  mount.rs  qaul_messaging.rs  test_utils.rs
libqaul/http/src/: authenticator.rs  lib.rs  method.rs  rpc.rs  stream.rs
libqaul/ipc/: Cargo.toml
libqaul/olsrd/: hashing.c  hashing.h
libqaul/platform/: Cargo.toml
libqaul/platform/src/: lib.rs
libqaul/polarssl/polarssl/: sha1.h
libqaul/qaul/: Cargo.toml  README.md
libqaul/qaul-core/: Cargo.toml  README.md
libqaul/qaul-http/src/: lib.rs
libqaul/qaul-netlink/: Cargo.toml  README.md
libqaul/qaul-platform/: Cargo.toml  README.md
libqaul/qaul-rest/: Cargo.toml
libqaul/qaul/src/: lib.rs
libqaul/ratman/: README.md
libqaul/rpc/: Cargo.toml
libqaul/rpc/src/: lib.rs  proto.rs  subtask.rs
libqaul/rpc/tests/: README.md  authentication.rs  chat-message.rs  chat-messages.rs  chat-room-debug.rs  chat-room.rs  chat-rooms-debug.rs  chat-rooms.rs  chat.rs  debug.rs  harness.rs  tests.rs  user-debug.rs  user.rs  users-debug.rs  users.rs
libqaul/service/chat/: Cargo.toml
libqaul/service/core/: Cargo.toml
libqaul/src/: auth.rs  configuration.rs  contacts.rs  discover.rs  error.rs  files.rs  harness.rs  lib.rs  qaul.rs  security.rs  services.rs  storage.rs  store.rs  types.rs  utils.rs
libqaul/src/api/: c.rs  (+15 more)
libqaul/storage/: Cargo.toml
libqaul/tests/: messages.rs  simple.rs  subscriptions.rs  users.rs
libqaul/tide-naive-static-files/: Cargo.toml  README.md
libqaul/win32/: functions.h  pthread.h
libqaul/ws/: Cargo.toml
librobot/: Cargo.toml  README  build.sh
librobot/src/: lib.rs
netmod-mem/: Cargo.toml
netmod-mem/src/: io.rs  lib.rs  media.rs
netmod-mem/tests/: basic.rs  broadcast.rs
netmod-tcp/: Cargo.toml  README.md
netmod-tcp/src/: error.rs  lib.rs  peers.rs  socket.rs
netmod-udp/: Cargo.toml  README.md
netmod-udp/src/: addrs.rs  framing.rs  lib.rs  main.rs  socket.rs
netmod-wd/: Cargo.toml
netmod-wd/src/: lib.rs
permute/: Cargo.toml
permute/src/: arbitrary_tandem_control_iter.rs  permutations.rs  permute_iter.rs
qaulhubd/: Cargo.toml
qaulhubd/examples/: overlay.rs
qaulhubd/src/: main.rs
ratman/: Cargo.toml  README.md
ratman/configure/: Cargo.toml
ratman/diagnostics/: Cargo.toml
ratman/harness/: Cargo.toml
ratman/identity/: Cargo.toml
ratman/netlink/: Cargo.toml
ratman/netmod/: Cargo.toml
ratman/routing-core/: Cargo.toml
ratman/src/: clock.rs  core.rs  core2.rs  data.rs  diag.rs  error.rs  journal.rs  lib.rs  protocol.rs  slicer.rs  utils.rs
ratman/tests/: README.md  announce.rs  chat.rs  very_simple_chat.rs
rust/: .gitignore  Cargo.toml  e2e_test.py
rust/.cargo/: config.toml
rust/ble_module/: Cargo.toml
rust/clients/: matrix.yaml
rust/include/: README.md  libqaul.h
rust/libqaul/: Cargo.toml  build.rs  build_android_release.sh  build_libqaul.sh  build_libqaul_android.sh  build_libqaul_ios.sh  build_libqaul_macos.sh  build_libqaul_raspberry.sh  build_libqaul_raspberry64.sh
rust/qaul-proto/: Cargo.toml  build.rs  service_generator.rs
rust/qaul-sim/: BENCHMARKS.md  Cargo.toml
rust/qauld-rpc/: Cargo.toml
(+3240 files in other folders)
