[workspace]
members = [

    # qaul.net service library
    "libqaul",

    # libqaul additions
    "libqaul/http",
    "libqaul/rpc",
    "libqaul/ipc",
    "libqaul/ws",

    # qaul.net main services
    "libqaul/service/chat",
    # "libqaul/service/feed",
    "libqaul/service/files",
    "libqaul/service/voices",

    # decentralised routing protocol
    "ratman",
    "ratman/identity",
    "ratman/netmod",

    # Various utility crates
    "clockctrl",
    "permute",
    "visn",
    "async-notify",
    
    # Available netmod drivers
    "netmod-mem",
    "netmod-udp",
    "netmod-wd",

    # Client specific targets
    "clients/linux",
    "clients/linux-cli",

    # Android specifics
    "librobot",

    # test binaries
    "clients/linux-http-test",
	"clients/linux-voice-test"
]
