[workspace]
members = [
    # Main storage database
    "alexandria",

    # main qaul.net service library
    "libqaul",

    # libqaul additions
    "libqaul/http",
    "libqaul/ipc",
    "libqaul/rpc",
    "libqaul/ws",

    # qaul.net main services
    "libqaul/service/chat",
    "libqaul/service/files",
    "libqaul/service/voice",

    # decentralised routing protocol
    "ratman",
    "ratman/harness",
    "ratman/identity",
    "ratman/netmod",
    "ratman/configure",

    # various utility crates
    "async-notify",
    "clockctrl",
    "permute",
    "visn",
    
    # available netmod drivers
    "netmod-mem",
    "netmod-tcp",
    "netmod-udp",
    "netmod-wd",

    # android build support
    "android-support",

    # test binaries
    "clients/multinode-test",
    "clients/linux-http-test",
    "clients/linux-voice-test",
    "clients/mini-tcp",

    # Actual target binaries
    "clients/linux-cli",
    "clients/hubd",
]
