[workspace]
members = [
    # Main storage database
    "utils/alexandria",

    # main qaul.net service library
    "libqaul",

    # libqaul additions
    # "libqaul/http",
    # "libqaul/ipc",
    # "libqaul/rpc",
    # "libqaul/ws",

    # RPC libraries
    "rpc-layer/qrpc-sdk",
    "rpc-layer/rpc-broker",
    "rpc-layer/libqaul-rpc",
    "rpc-layer/ratman-rpc",
    "rpc-layer/service-rpc",

    # qaul.net main services
    "libqaul/service/chat",
    "libqaul/service/files",
    "libqaul/service/voice",

    # decentralised routing protocol
    "ratman",
    "ratman/harness",
    "ratman/identity",
    "ratman/netmod",
    "ratman/configure",

    # various utility crates
    "utils/async-notify",
    "utils/clockctrl",
    "utils/permute",
    "utils/visn",
    
    # available netmod drivers
    "netmods/netmod-mem",
    "netmods/netmod-tcp",
    "netmods/netmod-udp",
    "netmods/netmod-wd",

    # android build support
    # "utils/android-support",

    # android logging support
    # "utils/android-tracing",

    # test binaries
    # "clients/multinode-test",
    # "clients/linux-http-test",
    # "clients/linux-voice-test",
    # "clients/mini-tcp",

    # Actual target binaries
    "clients/hubdctl",
    "clients/hubd",
]
