[package]
name = "alexandria"
description = "An encrypted document-oriented database with tag based query support"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
repository = "https://git.open-communication.net/qaul/alexandria"
documentation = "https://docs.rs/alexandria"
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
id = { version = "0.4", path = "../ratman/identity", features = ["digest", "random", "aligned"], package = "ratman-identity" }

async-std = { version = "1.0", features = ["unstable"] }
serde = { version = "1.0", features = ["derive", "rc"] }
sodiumoxide = "0.2.5"
bincode = "1.0"
keybob = "0.3"
failure = "0.1"

[dev-dependencies]
tempdir = "0.3"