[package]
name = "libqauldroid"
description = "A libqaul and ratman shim for Android"
version = "0.1.0"
license = "APGL-3.0-or-later"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"

[lib]
name = "qauldroid"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.5"
jni = { version = "0.14", default-features = false }
tempfile = "3.0"
tracing = { version = "0.1", features = ["log", "log-always"] }

libqaul = { path = "../libqaul", features = ["ffi-java"] }
libqaul-http = { path = "../libqaul/http" }
libqaul-rpc = { path = "../libqaul/rpc" }     
netmod-wd = { path = "../netmod-wd" }
qaul-chat = { path = "../libqaul/service/chat", features = ["ffi-java"] }
qaul-voice = { path = "../libqaul/service/voice" }
ratman = { path = "../ratman" }
ratman-configure = { path = "../ratman/configure", features = ["android"] }

log = "*"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8"
