[package]
name = "libqaul"
version = "0.2.0"
authors = ["qaul.net community <contact@qaul.net>"]
edition = "2018"

[dependencies]
libp2p = { version = "0.38" }
async-std = { version = "1.9", features = ["attributes"] }
futures = "0.3.1"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"

config = "0.11"
lazy_static = "1.4"
toml = "0.5"
base64 = "0.13"
state = "0.4"

# internal references
#qaul_node = { path = "node" }
#qaul_configuration = { path = "configuration" }
#qaul_services = { path = "services" }
