[package]
name = "libqaul"
version = "0.2.0"
authors = ["qaul.net community <contact@qaul.net>"]
edition = "2018"
license = "AGPL"

[lib]
name = "libqaul"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
libp2p = { version = "0.39" }
async-std = { version = "1.9", features = ["attributes"] }
futures = "0.3.15"
serde = {version = "=1.0", features = ["derive"] }
serde_json = "=1.0"
once_cell = "1.8"
log = "0.4"
pretty_env_logger = "0.4"
bincode = "1.3"
config = "0.11"
lazy_static = "1.4"
toml = "0.5"
base64 = "0.13"
state = "0.5"
humantime = "2.1"
tracing = "0.1.26"
void = "1.0"
wasm-timer = "0.2"
rand = "0.8"
prost = "0.8"
libc = "0.2"
crossbeam-channel = "0.5"
bs58 = "0.4"
futures-ticker = "0.0.1"
jni = "0.19"

# internal references
qaul_info = { path = "src/libp2p_modules/qaul_info" }

[build-dependencies]
prost-build = "0.8"


# special setting for android
[target.aarch64-linux-android.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.armv7-linux-androideabi.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.i686-linux-android.dependencies]
openssl = { version = "*", features = ["vendored"] }

[target.x86_64-linux-android.dependencies]
openssl = { version = "*", features = ["vendored"] }
