[package]
name = "netmod-mem"
description = "A fully in-memory implementation of a netmod endpoint"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
ratman-netmod = { path = "../ratman/netmod", package = "ratman-netmod" }
ratman-identity = { path = "../ratman/identity", package = "ratman-identity", features = [ "digest" ] }
async-trait = "0.1"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
crossbeam-channel = "0.4"
