[package]
name = "netmod-mem"
description = "A fully in-memory implementation of a netmod endpoint"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
crossbeam-channel = "0.4"
ratman-identity = { version = "0.4", path = "../ratman/identity", package = "ratman-identity", features = [ "digest" ] }
ratman-netmod = { version = "0.3", path = "../ratman/netmod", package = "ratman-netmod" }