[package]
name = "netmod-udp"
description = "A UDP overlayed netmod endpoint driver"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
async-notify = { path = "../async-notify" }
netmod = { path = "../ratman/netmod", package = "ratman-netmod" }
identity = { path = "../ratman/identity", package = "ratman-identity" }

async-trait = "0.1"
async-std = { version = "1.0", features = ["unstable"] }
conjoiner = { version = "1.2", package = "conjoiner-engine" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
