[package]
name = "qaulhubd"
version = "0.1.0"
authors = ["Leonora Tindall <nora@nora.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "unstable"] }
ratman = { path = "../ratman" }
ratman-netmod = { path = "../ratman/netmod" }
libqaul = { path = "../libqaul" }
netmod-overlay = { path = "../netmod-overlay" }
