[package]
name = "ratman"
description = "A delay tolerant, journaled and distributed userspace packet router"
license = "AGPL-3.0"
homepage = "https://qaul.net"
version = "0.0.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
conjoiner = { version = "1.2", package = "conjoiner-engine" }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.0", features = ["std", "unstable"] }

twox-hash = "1.5"

# Sub-components
identity = { version = "0.1", path = "identity", package = "ratman-identity" }
netmod = { version = "0.1", path = "netmod", package = "ratman-netmod"}
clockctrl = { version = "0.1", path = "../clockctrl" }