[package]
name = "ratman"
description = "A delay tolerant, journaled and distributed userspace packet router"
license = "AGPL-3.0"
homepage = "https://qaul.net"
version = "0.1.1"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"

[dependencies]
conjoiner = { version = "1.2", package = "conjoiner-engine" }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.0", features = ["std", "unstable"] }
futures = "0.3"

twox-hash = "1.5"

# Sub-components
identity = { version = "0.4", path = "identity", package = "ratman-identity", features = ["digest", "random"] }
netmod = { version = "0.3", path = "netmod", package = "ratman-netmod"}
clockctrl = { version = "0.1", path = "../clockctrl" }
async-notify = { path = "../async-notify" }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
netmod-mem = { path = "../netmod-mem" }
bincode = "1.2"
