[workspace]
resolver = "2"
members = [
    # qaul library
    "libqaul",

    # protobuf types
    "qaul-proto",

    # shared RPC plumbing for qauld clients
    "qauld-rpc",

    # binaries
    "clients/cli",
    "clients/qauld",
    "clients/qauld-ctl",

    # libp2p modules
    "libp2p_modules/qaul_info",
    "libp2p_modules/qaul_messaging",

    # simulation
    "qaul-sim"
]
exclude = ["ble_module"]
