[package]
name = "qaul-http-test"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
libqaul-http = { path = "../../libqaul/http-api", features = ["messaging"] }
qaul-messaging = { path = "../../libqaul/service/messaging" }
libqaul = { path = "../../libqaul" }
