[package]
name = "qaul-hubd"
description = "A modular and configurable internet overlay router for qaul.net"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie>", "Leonora Tindall <nora@nora.codes>"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
libqaul = { path = "../../libqaul" }
netmod-tcp = { path = "../../netmods/netmod-tcp" }
netmod-udp = { path = "../../netmods/netmod-udp" }
ratman = { path = "../../ratman" }
ratman-configure = { path = "../../ratman/configure" }

async-std = { version = "=1.5", features = ["attributes"] }
clap = { version = "2.0", features = ["wrap_help", "color"] }
directories = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }