[package]
name = "qaul-hubd"
description = "A modular and easy to use internet overlay router for qaul.net"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie>", "Leonora Tindall <nora@nora.codes>"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
libqaul = { path = "../../libqaul" }
netmod-tcp = { path = "../../netmods/netmod-tcp" }
netmod-udp = { path = "../../netmods/netmod-udp" }
ratman = { path = "../../ratman" }
ratman-configure = { path = "../../ratman/configure" }
rpc-broker = { path = "../../rpc-layer/rpc-broker" }

async-std = { version = "=1.5", features = ["attributes"] }
clap = { version = "2.0", features = ["wrap_help", "color"] }
directories = "2.0"
igd = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
pnet = "0.26"
ipnetwork = "0.16"