[package]
name = "hubdctl"
description = "A control RPC client for qaul-hubd"
version = "0.1.0"
authors = ["Kaiden Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
libqaul = { path = "../../libqaul" }
ratman = { path = "../../ratman" }
async-std = { version = "=1.5", features = ["attributes"] }
futures = "0.3"
tempfile = "3.0"