[package]
name = "linux-cli"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
libqaul = { path = "../../libqaul" }
ratman = { path = "../../ratman" }
async-std = { version = "1.0", features = ["attributes"] }
futures = "0.3"
tempfile = "3.0"