[package]
name = "linux-http-test"
description = "A linux server binary that bootstraps a test server for the web UI to test with"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
ratman = { path = "../../ratman" }
libqaul = { path = "../../libqaul" }
libqaul-rpc = { path = "../../libqaul/rpc", features = ["chat", "json"] }
libqaul-http = { path = "../../libqaul/http" }
qaul-chat = { path = "../../libqaul/service/chat" }
# qaul-voice = { path = "../../libqaul/service/voice" }

async-std = { version = "=1.5", features = ["attributes"] }
tempfile = "3.0"
