[package]
name = "qaul-linux"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
libqaul = { path = "../../libqaul" }
chat = { path = "../../libqaul/service/chat", package = "qaul-chat" }

ratman = { path = "../../ratman" }
ratman-netmod = { path = "../../ratman/netmod" }
netmod-mem = { path = "../../netmod-mem" }

async-std = "1.0"
