[package]
name = "qaul-common"
description = "A collection of common types and abstractons shared across all qaul.net libraries"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>",
    "Leonora Tindall <nora@nora.codes>",
	"Jess 3Jane <me@jess.coffee>"]
edition = "2018"

[dependencies]
blake2 = "0.8"
generic-array = "0.12.0"
iron = "0.6"
