[package]
name = "qaul-http"
version = "0.1.0"
authors = ["Jess 3Jane <me@jess.coffee>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
base64 = "0.10"
iron = "0.6"
persistent = "0.4"
json-api = { git = "https://git.open-communication.net/qaul/json-api" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.3"
chrono = "0.4"
cookie = "0.12"

libqaul = { path = ".." } 
identity = { path = "../../ratman/identity", package = "ratman-identity" }

[dev-dependencies]
anneal = { git = "https://git.open-communication.net/qaul/anneal", features = ["jsonapi", "cookies"], version = "0.2" }
