[package]
name = "qaul-http"
version = "0.1.0"
authors = ["Jess 3Jane <me@jess.coffee>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
base64 = "0.10"
iron = "0.6"
persistent = "0.4"
japi = "0.1"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.3"
chrono = "0.4"
cookie = "0.12"

libqaul = { path = ".." } 
identity = { path = "../../ratman/identity", package = "ratman-identity" }

[dev-dependencies]
anneal = { features = ["jsonapi", "cookies"], version = "0.3" }
