[package]
name = "libqaul-http"
description = "An IPC layer to expose libqaul and service APIs via http/json:api"
version = "0.1.0"
authors = ["Jess 3Jane <me@jess.coffee>", "Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
base64 = "0.10"
iron = "0.6"
persistent = "0.4"
japi = "0.3"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.3"
chrono = "0.4"
hex = "0.4"
router = "0.6"

libqaul = { path = ".." } 
identity = { path = "../../ratman/identity", package = "ratman-identity" }

text_messaging = { path = "../service/messaging", package = "qaul-messaging", optional = true }

[dev-dependencies]
anneal = { features = ["jsonapi"], version = "0.3" }
netmod_mem = { path = "../../netmod-mem", package = "netmod-mem" }
ratman = { path = "../../ratman", package = "ratman" }

[features]
default = ["messaging"]

# add support for the qaul_messaging service
messaging = ["text_messaging"]
