[package]
name = "libqaul-http"
description = "An translation layer for the libqaul (and services) RPC interfaces"
version = "0.1.0"
authors = ["Jess 3Jane <me@jess.coffee>", "Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
libqaul = { version = "*", path = ".." }
libqaul-rpc = { version = "*", path = "../rpc" }
serde_json = "1.0"
async-std = "1.0"

tide = { version = "0.6", features = ["unstable"] }
#tide-naive-static-files = "2.2.0"
tide-naive-static-files = { path = "../tide-naive-static-files" }
futures = "0.3.4"
mime = "0.3.16"
